--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coveralls
 
 script: #"cd ..; nosetests --with-coverage --cover-package=nansat nansat.tests"
-  - coverage run --source=nerscmetadata setup.py test
+  - coverage run --source=pythesint setup.py test
 
 after_success:
   - coveralls
