--- a/pythesint/pythesintrc.yaml
+++ b/pythesint/pythesintrc.yaml
@@ -23,3 +23,32 @@
       - Subtype
       - Short_Name
       - Long_Name
+
+- name: gcmd_science_keyword
+  module: gcmd_vocabulary
+  class: GCMDVocabulary
+  kwargs:
+    url: http://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/sciencekeywords?format=csv
+    categories:
+      - Category
+      - Topic
+      - Term
+      - Variable_Level_1
+      - Variable_Level_2
+      - Variable_Level_3
+      - Detailed_Variable
+
+- name: gcmd_provider
+  module: gcmd_vocabulary
+  class: GCMDVocabulary
+  kwargs:
+    url: http://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/providers?format=csv
+    categories:
+      - Bucket_Level0
+      - Bucket_Level1
+      - Bucket_Level2
+      - Bucket_Level3
+      - Short_Name
+      - Long_Name
+      - Data_Center_URL
+
