--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run --source=pythesint setup.py test
+  - coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
 
 after_success:
   - coveralls
