--- a/pythesint/pythesintrc.yaml
+++ b/pythesint/pythesintrc.yaml
@@ -3,6 +3,13 @@
   class: WKVVocabulary
   kwargs:
     url: https://raw.githubusercontent.com/nansencenter/nersc-vocabularies/master/nansat_wkv.yml
+    categories:
+      - standard_name
+      - long_name
+      - short_name
+      - units
+      - minmax
+      - colormap
 
 - name: gcmd_instrument
   module: gcmd_vocabulary
@@ -116,6 +123,12 @@
   class: CFVocabulary
   kwargs:
     url: http://cfconventions.org/Data/cf-standard-names/30/src/cf-standard-name-table.xml
+    categories:
+      - standard_name
+      - canonical_units
+      - grib
+      - amip
+      - description
 
 - name: iso19115_topic_category
   module: iso19115_vocabulary
