--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,27 @@ python:
   - 2.7
   - 3.5
   - 3.6
+  jobs:
+    include:
+      # Unit tests are run
+      - stage: 'install'
+        install:
+          - python setup.py sdist
+          - pip install dist/*.tar.gz
+          - pip install mock --upgrade
+          - pip install coveralls
 
-install:
-  - python setup.py sdist
-  - pip install dist/*.tar.gz
-  - pip install mock --upgrade
-  - pip install coveralls
+        script:
+          - coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
 
-script:
-  - coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
+        after_success:
+          - coveralls
 
-after_success:
-  - coveralls
-
-if: tag IS present  
-deploy:
-  - provider: pypi
-    user: "__token__"
-    password: "${PYPI_TOKEN}"
-    on:
-      tags: true
-      
+  - stage: 'pypi deployment'
+  if: tag IS present  
+  deploy:
+    - provider: pypi
+      user: "__token__"
+      password: "${PYPI_TOKEN}"
+      on:
+        tags: true
