--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,12 @@ python:
         after_success:
           - coveralls
 
-  - stage: 'pypi deployment'
-  if: tag IS present  
-  deploy:
-    - provider: pypi
-      user: "__token__"
-      password: "${PYPI_TOKEN}"
-      on:
-        tags: true
+      - stage: 'pypi deployment'
+      #if: tag IS present  
+      deploy:
+        - provider: pypi
+          user: "__token__"
+          password: "${PYPI_TOKEN}"
+          on:
+            all_branches: true
+            #tags: true
