#100 added few line to travis for automatic deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   jobs:
     include:
       # Unit tests are run
-      - stage: 'install'
+      - name: 'install'
           install:
             - python setup.py sdist
             - pip install dist/*.tar.gz
