#24 added some lines in travis for automatic deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,9 @@ script:
 after_success:
   - coveralls
 
+deploy:
+  - provider: pypi
+    user: "__token__"
+    password: "${PYPI_TOKEN}"
+    on:
+      tags: true
