--- a/pythesint/pythesintrc.yaml
+++ b/pythesint/pythesintrc.yaml
@@ -122,12 +122,10 @@
   module: cf_vocabulary
   class: CFVocabulary
   kwargs:
-    url: http://cfconventions.org/Data/cf-standard-names/30/src/cf-standard-name-table.xml
+    url: https://mmisw.org/ont/api/v0/ont?format=rj&iri=http://mmisw.org/ont/cf/parameter
     categories:
       - standard_name
       - canonical_units
-      - grib
-      - amip
       - description
 
 - name: iso19115_topic_category
