add skip_existing flag to pypi deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ deploy:
   - provider: pypi
     user: "__token__"
     password: "${PYPI_TOKEN}"
+    skip_existing: true
     on:
       tags: true
