--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -22,6 +22,8 @@ jobs:
         pip install dist/*.tar.gz coveralls mock
 
     - name: Run unit tests
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}"
       run: coverage run --omit=pythesint/tests/* --source=pythesint setup.py test && coveralls
 
     - name: Publish Python package
