--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python setup.py sdist
-        pip install dist/*.tar.gz coveralls mock
+        pip install --upgrade dist/*.tar.gz coveralls mock
 
     - name: Run unit tests
       env:
