--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Publish coverage
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: coveralls --service=github
 
     - name: Publish Python package
