--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py sdist
-        pip install --upgrade dist/*.tar.gz coveralls mock
+        pip install --upgrade coveralls mock
 
     - name: Run unit tests
       run: coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
@@ -28,6 +27,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: coveralls --service=github
+
+    - name: Build Python package
+      if: github.event_name == 'release'
+      run: >
+        PYTHESINT_RELEASE="${GITHUB_REF#refs/tags/}"
+        python setup.py sdist
 
     - name: Publish Python package
       if: github.event_name == 'release'
