--- a/pythesint/pythesintrc.yaml
+++ b/pythesint/pythesintrc.yaml
@@ -136,54 +136,54 @@
 
 - name: mmd_access_constraints
   module: mmd_vocabulary
-  class: MMDAccessConstraints
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_access_constraints.xml
+    collection_label: 'Access Constraint'
     categories:
       - prefLabel
       - definition
 
 - name: mmd_activity_type
   module: mmd_vocabulary
-  class: MMDActivityType
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_activity_type.xml
+    collection_label: 'Activity Type'
     categories:
       - prefLabel
       - definition
 
 - name: mmd_areas
   module: mmd_vocabulary
-  class: MMDAreas
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_areas.xml
+    collection_label: 'Geographical Areas'
     categories:
       - prefLabel
       - definition
 
 - name: mmd_operstatus
   module: mmd_vocabulary
-  class: MMDOperStatus
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_operstatus.xml
+    collection_label: 'Operational Status'
     categories:
       - prefLabel
       - definition
 
 - name: mmd_platform_type
   module: mmd_vocabulary
-  class: MMDPlatformType
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_platform_type.xml
+    collection_label: 'Platform'
     categories:
       - prefLabel
       - definition
 
 - name: mmd_use_constraint_type
   module: mmd_vocabulary
-  class: MMDUseConstraintType
+  class: MMDVocabulary
   kwargs:
-    url: https://raw.githubusercontent.com/metno/mmd/master/thesauri/mmd_use_constraint_type.xml
+    collection_label: 'Use Constraint'
     categories:
       - prefLabel
       - definition
