--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -32,7 +32,7 @@ jobs:
       if: github.event_name == 'release'
       run: >
         PYTHESINT_RELEASE="${GITHUB_REF#refs/tags/}"
-        python setup.py sdist
+        python setup.py sdist bdist_wheel
 
     - name: Publish Python package
       if: github.event_name == 'release'
