--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade coveralls mock
+        pip install --upgrade coveralls mock wheel
 
     - name: Run unit tests
       run: coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
