--- a/pythesint/pythesintrc.yaml
+++ b/pythesint/pythesintrc.yaml
@@ -20,7 +20,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/instruments/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/instruments/?format=csv
     categories:
       - Category
       - Class
@@ -33,7 +33,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/sciencekeywords/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/sciencekeywords/?format=csv
     categories:
       - Category
       - Topic
@@ -47,7 +47,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/providers/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/providers/?format=csv
     categories:
       - Bucket_Level0
       - Bucket_Level1
@@ -61,7 +61,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/platforms/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/platforms/?format=csv
     categories:
       - Category
       - Series_Entity
@@ -72,7 +72,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/locations/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/locations/?format=csv
     categories:
       - Location_Category
       - Location_Type
@@ -84,7 +84,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/horizontalresolutionrange/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/horizontalresolutionrange/?format=csv
     categories:
       - Horizontal_Resolution_Range
 
@@ -92,7 +92,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/verticalresolutionrange/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/verticalresolutionrange/?format=csv
     categories:
       - Vertical_Resolution_Range
 
@@ -100,7 +100,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/temporalresolutionrange/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/temporalresolutionrange/?format=csv
     categories:
       - Temporal_Resolution_Range
 
@@ -108,7 +108,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/projects/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/projects/?format=csv
     categories:
       - Bucket
       - Short_Name
@@ -118,7 +118,7 @@
   module: gcmd_vocabulary
   class: GCMDVocabulary
   kwargs:
-    url: https://gcmdservices.gsfc.nasa.gov/kms/concepts/concept_scheme/rucontenttype/?format=csv
+    url: https://gcmd.earthdata.nasa.gov/kms/concepts/concept_scheme/rucontenttype/?format=csv
     categories:
       - Type
       - Subtype
