--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -5,15 +5,24 @@ on:
   release:
     types: [released]
 jobs:
-  tests_and_build:
-    runs-on: ubuntu-20.04
+  tests:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version:
+          - {'python': '3.6', 'latest': false}
+          - {'python': '3.7', 'latest': false}
+          - {'python': '3.8', 'latest': false}
+          - {'python': '3.9', 'latest': false}
+          - {'python': '3.10', 'latest': false}
+          - {'python': '3.11', 'latest': true}
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.6'
+        python-version: ${{ matrix.python.version }}
 
     - name: Install dependencies
       run: |
@@ -24,14 +33,27 @@ jobs:
       run: coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
 
     - name: Publish coverage
+      if: ${{ matrix.version.latest }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: coveralls --service=github
 
+
+  build_publish_package:
+    runs-on: 'ubuntu-latest'
+    needs: tests
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3'
+
     - name: Build Python package
       if: github.event_name == 'release'
       run: >
-        PYTHESINT_RELEASE="${GITHUB_REF#refs/tags/}"
+        PYTHESINT_RELEASE="${{ github.ref_name }}"
         python setup.py sdist bdist_wheel
 
     - name: Publish Python package
