install build tools in the package building job

--- a/.github/workflows/tests_build.yml
+++ b/.github/workflows/tests_build.yml
@@ -52,6 +52,9 @@ jobs:
       with:
         python-version: '3'
 
+    - name: Install build tools
+      run: pip install setuptools wheel
+
     - name: Build Python package
       run: >
         PYTHESINT_RELEASE="${{ github.ref_name }}"
