--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: ['**']
   release:
-    types: [released]
+    types: [prereleased, released]
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -26,12 +26,13 @@ jobs:
         python-version: ${{ matrix.python_version }}
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade coveralls mock wheel
+      run:
+        |
+        pip install --upgrade coveralls mock
+        pip install -e .
 
     - name: Run unit tests
-      run: coverage run --omit=pythesint/tests/* --source=pythesint setup.py test
+      run: coverage run --omit=pythesint/tests/* --source=pythesint -m unittest discover pythesint.tests
 
     - name: Publish coverage
       if: ${{ env.latest }}
@@ -53,12 +54,10 @@ jobs:
         python-version: '3'
 
     - name: Install build tools
-      run: pip install setuptools wheel
+      run: python3 -m pip install --upgrade build
 
     - name: Build Python package
-      run: >
-        PYTHESINT_RELEASE="${{ github.ref_name }}"
-        python setup.py sdist bdist_wheel
+      run: python -m build
 
     - name: Publish Python package
       uses: pypa/gh-action-pypi-publish@release/v1
