--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pythesint"
 description = "A Python interface to various metadata vocabularies"
+readme = "README.md"
 authors = [
     {name = "Morten W. Hansen"},
     {name = "Anton A. Korosov", email="anton.korosov@nersc.no"},
